JETcompiler/Tests/bad/bad012.myout
Function "foo" does not contain a return statement, line 6
